syntax = "proto3";

package core_proto;

message Request {
    oneof sync_requests {
        GreetingRequest greeting = 1;
        BacktraceRequest sync_backtrace = 3;
    }

    oneof async_requests {
        SleepRequest sleep = 2;
        BacktraceRequest async_backtrace = 4;
    }
}

// Sync

message GreetingRequest {
    string verb = 1;
    string name = 2;
}
message GreetingResponse {
    string text = 1;
}

// Async

message SleepRequest {
    uint64 millis = 1;
}
message SleepResponse {
    string text = 1;
}

message BacktraceRequest {}
message BacktraceResponse {
    string text = 1;
}
